--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -71,16 +71,16 @@
 <!--<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>-->
 <!--<script src="assets/js/theme.min.js"></script>-->
 <script src="assets/js/jquery.min.js"></script>
-<!--<script src="assets/js/select2.min.js"></script>-->
+<script src="assets/js/select2.min.js"></script>
 
-<script>
-  $(document).ready(function () {
-    $("#biz-servicearea").select2({
-      theme: "bootstrap4",
-    });
-    $("#biz-type").select2({
-      theme: "bootstrap4",
-    });
-  });
-</script>
+<!--<script>-->
+  <!--$(document).ready(function () {-->
+    <!--$("#biz-servicearea").select2({-->
+      <!--theme: "bootstrap4",-->
+    <!--});-->
+    <!--$("#biz-type").select2({-->
+      <!--theme: "bootstrap4",-->
+    <!--});-->
+  <!--});-->
+<!--</script>-->
 </html>
