--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -17,7 +17,7 @@
   <!--<link rel="stylesheet" href="assets/css/nouislider.min.css" />-->
   <!--<link rel="stylesheet" href="assets/css/simplebar.min.css" />-->
   <!--<link rel="stylesheet" href="assets/css/tiny-slider.css" />-->
-  <!--<link rel="stylesheet" href="assets/css/theme.min.css" />-->
+  <!-- <link rel="stylesheet" href="assets/css/theme.min.css" /> -->
   <!--<link-->
     <!--href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"-->
     <!--rel="stylesheet"-->
@@ -45,12 +45,12 @@
     <!--crossorigin="anonymous"-->
   <!--/>-->
   <!--<link rel="stylesheet" href="assets/css/icons.css" />-->
-
+ 
 </head>
 <body>
   <app-root></app-root>
 </body>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
 
 <!--<script src="assets/js/bootstrap.bundle.min.js"></script>-->
@@ -69,7 +69,7 @@
 <!--<script src="assets/vendor/filepond/dist/filepond.min.js"></script>-->
 <!--<script src="assets/vendor/cleave.js/dist/cleave.min.js"></script>-->
 <!--<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>-->
-<!--<script src="assets/js/theme.min.js"></script>-->
+<!-- <script src="assets/js/theme.min.js"></script> -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/select2.min.js"></script>
 
